--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -1,15 +1,32 @@
 <div class="page page-dashboard" data-ng-controller="DashboardCtrl">
 
+
+<div class="row" style="padding:5px;">
+	<div class="col-lg-12" style="text-align: right;">
+		Datos del 1 al 7 de Abril 2015<br/>
+	</div>
+</div>
     <!-- stats -->
     <div class="row">
+	    <div class="col-lg-3 col-xsm-6">
+            <div class="panel mini-box">
+                <span class="box-icon bg-danger">
+                    <i class="fa fa-shopping-cart"></i>
+                </span>
+                <div class="box-info">
+                    <p class="size-h3">10,263</p>
+                    <p class="text-muted"><span data-i18n="Ventas $"></span></p>
+                </div>
+            </div>
+        </div>
         <div class="col-lg-3 col-xsm-6">
             <div class="panel mini-box">
                 <span class="box-icon bg-success">
-                    <i class="fa fa-rocket"></i>
+                    <i class="fa fa-credit-card"></i>
                 </span>
                 <div class="box-info">
-                    <p class="size-h2">25 <span class="size-h4">%</span></p>
-                    <p class="text-muted"><span data-i18n="Growth"></span></p>
+                    <p class="size-h3">5.25<span class="size-h4"></span></p>
+                    <p class="text-muted"><span data-i18n="Ticket Promedio $"></span></p>
                 </div>
             </div>
         </div>
@@ -19,8 +36,8 @@
                     <i class="fa fa-users"></i>
                 </span>
                 <div class="box-info">
-                    <p class="size-h2">112</p>
-                    <p class="text-muted"><span data-i18n="New users"></span></p>
+                    <p class="size-h3">78</p>
+                    <p class="text-muted"><span data-i18n="Transacciones"></span></p>
                 </div>
             </div>
         </div>
@@ -30,175 +47,293 @@
                     <i class="fa fa-dollar"></i>
                 </span>
                 <div class="box-info">
-                    <p class="size-h2">4,550</p>
-                    <p class="text-muted"><span data-i18n="Profit"></span></p>
+                    <p class="size-h3">1,550</p>
+                    <p class="text-muted"><span data-i18n="Utilidad $"></span></p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-3 col-xsm-6">
-            <div class="panel mini-box">
-                <span class="box-icon bg-danger">
-                    <i class="fa fa-shopping-cart"></i>
-                </span>
-                <div class="box-info">
-                    <p class="size-h2">262</p>
-                    <p class="text-muted"><span data-i18n="Sales"></span></p>
-                </div>
-            </div>
-        </div>
-
     </div>
     <!-- end stats -->
 
     <div class="row">
         <div class="col-md-8">
             <section class="panel panel-default">
-                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Data"></span></strong></div>
+                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Ventas del Mes"></span></strong></div>
                 <div class="panel-body" data-ng-controller="morrisChartCtrl">
-                    <div morris-chart
-                         data-data="comboData"
-                         data-type="bar"
-                         data-xkey="year"
-                         data-ykeys='["a", "b", "c"]'
-                         data-labels='["Value A", "Value B", "Value C"]'
-                         data-bar-colors='["#176799","#42A4BB","#78D6C7"]'
-                         style="height: 300px;"
-                         ></div>
+                        <div id="chartventas"></div>
                 </div>
             </section> 
         </div>
         <div class="col-md-4">
 
             <div class="panel panel-default">
-                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Data"></span></strong></div>
+                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Rank Productos"></span></strong></div>
                 <div class="panel-body"  data-ng-controller="flotChartCtrl">
-                    <div data-flot-chart
-                         data-data="donutChart2.data"
-                         data-options="donutChart2.options"
-                         style="width: 100%; height: 300px;"
-                         ></div>                    
-                </div>
+					<table class="table">
+					<thead>
+						<tr>
+							<th>Producto</th>
+							<th>Cantidad</th>
+							<th>Ventas US$</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>       
+							<td>HotDog Plus</td>
+							<td align="right">125</td>
+							<td align="right">325.45</td>
+						</tr>
+						<tr>       
+							<td>Bebida Gas</td>
+							<td align="right">78</td>
+							<td align="right">315.45</td>
+						</tr>
+						<tr>       
+							<td>Tesalia</td>
+							<td align="right">152</td>
+							<td align="right">302.24</td>
+						</tr>
+						<tr>       
+							<td>Porcion Papas</td>
+							<td align="right">102</td>
+							<td align="right">215.25</td>
+						</tr>
+						<tr>       
+							<td>Slice Pizza</td>
+							<td align="right">99</td>
+							<td align="right">199.36</td>
+						</tr>
+						<tr>       
+							<td>Salchipapas</td>
+							<td align="right">99</td>
+							<td align="right">199.36</td>
+						</tr>
+						<tr>       
+							<td>Pincho Completo</td>
+							<td align="right">99</td>
+							<td align="right">199.36</td>
+						</tr>
+							</tbody>
+							</table>
+							
+			</div>
             </div>
-
-
-
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-8">
-            <div class="panel panel-default">
-                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Realtime Data"></span></strong></div>
-                <div class="panel-body">
-                    <div data-flot-chart-realtime
-                         data-type="realtime"
-                         style="width: 100%; height: 275px;"
-                         ></div>                    
-                </div>
-            </div>        
+	  <div class="col-md-4">
+		    <div class="panel panel-default">
+                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Contribución a Utilidad"></span></strong></div>
+                <div class="panel-body"  data-ng-controller="flotChartCtrl">
+		<table class="table">
+					<thead>
+						<tr>
+							<th>Categoría</th>
+							<th>% Contrib.</th>
+							<th>Utilidad US$</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>       
+							<td>Lacteos</td>
+							<td align="right">15%</td>
+							<td align="right">125.59</td>
+						</tr>
+						<tr>       
+							<td>Cárnicos</td>
+							<td align="right">12%</td>
+							<td align="right">120.21</td>
+						</tr>
+						<tr>       
+							<td>Galletas</td>
+							<td align="right">152</td>
+							<td align="right">302.24</td>
+						</tr>
+						<tr>       
+							<td>Gaseosas</td>
+							<td align="right">102</td>
+							<td align="right">215.25</td>
+						</tr>
+						<tr>       
+							<td>Munchies</td>
+							<td align="right">99</td>
+							<td align="right">199.36</td>
+						</tr>
+							</tbody>
+							</table>
+			</div>
+            </div>
+            
         </div>
         <div class="col-md-4">
-            <section class="panel panel-box">
-                <div class="panel-top bg-info">
-                    <div class="text-left">SNOW</div>
-                    <div class="divider divider-xl"></div>
-                    <div class="divider divider-lg"></div>
-                </div>
-                <div class="panel-icon bg-info">
-                    <!-- <i class="wi-day-cloudy"></i> -->
-                    <canvas ui-weather
-                            icon="SNOW"
-                            color="#fff"
-                            width="70"
-                            height="70"></canvas>
-                </div>
-                <div class="panel-bottom bg-reverse">
-                    <ul class="list-justified text-center">
-                        <li>
-                            <canvas ui-weather
-                                    icon="RAIN"
-                                    color="#23AE89"
-                                    width="40"
-                                    height="40"></canvas>                            
-                            <p class="text-muted">Wednesday</p>
-                        </li>
-                        <li>
-                            <canvas ui-weather
-                                    icon="WIND"
-                                    color="#6A55C2"
-                                    width="40"
-                                    height="40"></canvas>  
-                            <p class="text-muted">Thursday</p>
-                        </li>
-                        <li>
-                            <canvas ui-weather
-                                    icon="CLEAR_DAY"
-                                    color="#FFB61C"
-                                    width="40"
-                                    height="40"></canvas> 
-                            <p class="text-muted">Friday</p>
-                        </li>                        
-                    </ul>
-                </div>
-            </section>
+				
+                      <section class="panel panel-box info-box">
+                        <div class="panel-left panel-item bg-success">
+                            <i class="fa fa-rocket text-large stat-icon"></i>
+                        </div>
+                        <div class="panel-right panel-item bg-reverse">
+                            <p class="size-h2 no-margin">80<span class="size-h3">%</span></p>
+                            <p class="text-muted no-margin"><span data-i18n="Utilidad de Ventas"></span></p>
+                        </div>
+                    </section>
+					<section class="panel panel-box info-box">
+						<div class="panel-left panel-item bg-info">
+							<i class="fa fa-users text-large stat-icon">
+							</i>
+						</div>
+					<div class="panel-right panel-item bg-reverse">
+					<p class="size-h2 no-margin">1,320</p>
+					<p class="text-muted no-margin"><span data-i18n="Inventario Final US$"></span></p>
+					</div>
+				   </section>
+			</div>
+		<div class="col-md-4">
+				   <section class="panel panel-box info-box">
+						<div class="panel-left panel-item bg-warning">
+							<i class="fa fa-dollar text-large stat-icon">
+							</i>
+						</div>
+						<div class="panel-right panel-item bg-reverse">
+							<p class="size-h2 no-margin">93,760</p>
+							<p class="text-muted no-margin"><span data-i18n="Costo de Ventas US$"></span></p>
+						</div>
+				</section>
+				<section class="panel panel-box info-box">
+					<div class="panel-left panel-item bg-danger">
+						<i class="fa fa-shopping-cart text-large stat-icon"></i>
+					</div>
+					<div class="panel-right panel-item bg-reverse">
+						<p class="size-h2 no-margin">3,690</p>
+						<p class="text-muted no-margin"><span data-i18n="Compras del Período US$"></span></p>
+					</div>
+		</section>				
         </div>
+      
 
     </div>
 
 
-
-    <div class="panel panel-default">
-        <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Table"></span></strong></div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Project</th>
-                    <th>Manager</th>
-                    <th>Status</th>
-                    <th>Progress</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td><span class="color-success"><i class="fa fa-level-up"></i></span> TWLT</td>
-                    <td>Amery Lee</td>
-                    <td><span class="label label-info">Pending</span></td>
-                    <td><progressbar class="progressbar-xs no-margin" value="55"></progressbar>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td><span class="color-success"><i class="fa fa-level-up"></i></span> A16Z</td>
-                    <td>Romayne Carlyn</td>
-                    <td><span class="label label-primary">Due</span></td>
-                    <td><progressbar class="progressbar-xs no-margin" value="34" type="success"></progressbar></td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td><span class="color-warning"><i class="fa fa-level-down"></i></span> DARK</td>
-                    <td>Marybeth Joanna</td>
-                    <td><span class="label label-success">Due</span></td>
-                    <td><progressbar class="progressbar-xs no-margin" value="68" type="info"></progressbar></td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td><span class="color-info"><i class="fa fa-level-up"></i></span> Q300</td>
-                    <td>Jonah Benny</td>
-                    <td><span class="label label-danger">Blocked</span></td>
-                    <td><progressbar class="progressbar-xs no-margin" value="52" type="warning"></progressbar></td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td><span class="color-danger"><i class="fa fa-level-down"></i></span> RVNG</td>
-                    <td>Daly Royle</td>
-                    <td><span class="label label-warning">Suspended</span></td>
-                    <td><progressbar class="progressbar-xs no-margin" value="77" type="danger"></progressbar></td></td>
-                </tr>
-
-            </tbody>
-        </table>
-    </div>
+  <div class="row">
+	
+	<div class="col-md-12">
+		<section class="panel panel-default">
+                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Ventas por Horas Mes vs. Mes Anterior"></span></strong></div>
+                <div class="panel-body" data-ng-controller="morrisChartCtrl">
+                        <div id="charthoras"></div>
+                </div>
+            </section> 
+	</div>
+  </div>
+  
+    <div class="row">
+	
+	<div class="col-md-12">
+		<section class="panel panel-default">
+                <div class="panel-heading"><strong><span class="glyphicon glyphicon-th"></span> <span data-i18n="Ventas por día Mes vs. Mes Anterior"></span></strong></div>
+                <div class="panel-body" data-ng-controller="morrisChartCtrl">
+                        <div id="chartdias"></div>
+                </div>
+            </section> 
+	</div>
+  </div>
+    
 
 </div>
+<script>
+new Morris.Area({
+  // ID of the element in which to draw the chart.
+  element: 'chartventas',
+  // Chart data records -- each entry in this array corresponds to a point on
+  // the chart.
+  data: [
+    { x: '01/04', ventas: 458.10 },
+    { x: '02/04', ventas: 380.25 },
+    { x: '03/04', ventas: 625.58 },
+    { x: '04/04', ventas: 1275.12 },
+    { x: '05/04', ventas: 1189.25 },
+	{ x: '06/04', ventas: 129.25 },
+	{ x: '07/04', ventas: 654.25 }
+  ],
+  // The name of the data record attribute that contains x-values.
+  xkey: 'x',
+  // A list of names of data record attributes that contain y-values.
+  ykeys: ['ventas'],
+  // Labels for the ykeys -- will be displayed when you hover over the
+  // chart.
+  labels: ['ventas'],
+  parseTime: false,
+  lineColors: ['#E94B3B'],
+  resize: true
+});
+new Morris.Area({
+  // ID of the element in which to draw the chart.
+  element: 'charthoras',
+  // Chart data records -- each entry in this array corresponds to a point on
+  // the chart.
+  data: [
+    { x: '00', mes: 0,mesant: 0 },
+    { x: '01', mes: 0,mesant: 0 },
+    { x: '02', mes: 0,mesant: 0 },
+    { x: '03', mes: 0,mesant: 0 },
+    { x: '04', mes: 0,mesant: 0 },
+	{ x: '05', mes: 0,mesant: 0 },
+	{ x: '06', mes: 0,mesant: 0 },	
+	{ x: '07', mes: 10.22,mesant: 0 },
+	{ x: '08', mes: 113.25,mesant: 154.55 },
+	{ x: '09', mes: 183.25,mesant: 160.45 },
+	{ x: '10', mes: 213.25,mesant: 110.54 },
+	{ x: '11', mes: 45.121,mesant: 124.11 },
+	{ x: '12', mes: 150.22,mesant: 180.11 },
+	{ x: '13', mes: 325.25,mesant: 425.21 },
+	{ x: '14', mes: 345.23,mesant: 321.23 },
+	{ x: '15', mes: 200.12,mesant: 243.11 },
+	{ x: '16', mes: 183.25,mesant: 143.11 },
+	{ x: '17', mes: 120.23,mesant: 85.12 },
+	{ x: '18', mes: 140.22,mesant: 136.11 },
+	{ x: '19', mes: 180.23,mesant: 234.22 },
+	{ x: '20', mes: 190.21,mesant: 189.11 },
+	{ x: '21', mes: 22.23,mesant: 89.11 },
+	{ x: '22', mes: 143.23,mesant: 15.54 },
+	{ x: '23', mes: 11.11,mesant: 0 },
+	
+  ],
+  // The name of the data record attribute that contains x-values.
+  xkey: 'x',
+  // A list of names of data record attributes that contain y-values.
+  ykeys: ['mes','mesant'],
+  // Labels for the ykeys -- will be displayed when you hover over the
+  // chart.
+  labels: ['ventas', 'ventas-1'],
+  parseTime: false,
+  lineColors: ['#3AE99B', '#E93A7D'],
+  resize: true,
+  behaveLikeLine: true
+});
+new Morris.Line({
+  // ID of the element in which to draw the chart.
+  element: 'chartdias',
+  // Chart data records -- each entry in this array corresponds to a point on
+  // the chart.
+  data: [
+    { x: 'Lunes', mes: 445.65,mesant: 332.12 },
+    { x: 'Martes', mes: 821.54,mesant: 921.15 },
+    { x: 'Miercoles', mes: 823.23,mesant: 1050.12 },
+    { x: 'Jueves', mes: 1202.34,mesant: 1623.12 },
+    { x: 'Viernes', mes: 945.23,mesant: 1100.12 },
+	{ x: 'Sabado', mes: 1823.22,mesant: 2325.21 },
+	{ x: 'Domingo', mes: 1612.12,mesant: 1912.23 }	
+	  ],
+  // The name of the data record attribute that contains x-values.
+  xkey: 'x',
+  // A list of names of data record attributes that contain y-values.
+  ykeys: ['mes','mesant'],
+  // Labels for the ykeys -- will be displayed when you hover over the
+  // chart.
+  labels: ['ventas', 'ventas-1'],
+  parseTime: false,
+  lineColors: ['#666AD8', '#D8D666'],
+  resize: true
+});
+</script>
   
