--- a/www/views/header.html
+++ b/www/views/header.html
@@ -1,29 +1,37 @@
 <header class="clearfix">
-
+    <a href="#/" data-toggle-min-nav
+                 class="toggle-min"
+                 ><i class="fa fa-bars"></i></a>
 
     <!-- Logo -->
     <div class="logo">
         <a href="#/">
-            <span>PractiPOS</span>
+            <span>Dashboard</span>
         </a>
     </div>
 
     <!-- needs to be put after logo to make it working-->
- 
+    <div class="menu-button" toggle-off-canvas>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+    </div>
 
     <div class="top-nav">
         <ul class="nav-left list-unstyled">
-            
-            
-            
+			<li>
+                <a href="javascript:;">
+                    <i class="fa fa-cloud-upload"></i>
+					 <span class="badge badge-success">2</span>
+                </a>
+            </li>		
         </ul>
 
         <ul class="nav-right pull-right list-unstyled">
-            
             <li class="dropdown text-normal nav-profile" dropdown is-open="status.isopenProfile">
                 <a href="javascript:;" class="dropdown-toggle" dropdown-toggle ng-disabled="disabled">
                     <span class="hidden-xs">
-                        <span data-i18n="Dulce Candy"></span>
+                        <span data-i18n="Restaurant Manager"></span>
                     </span>
                 </a>
             </li>
