--- a/www/views/dashboard.html
+++ b/www/views/dashboard.html
@@ -1,10 +1,38 @@
 <div class="page page-dashboard" data-ng-controller="DashboardCtrl">
 
 
-<div class="row" style="padding:5px;">
-	<div class="col-lg-12" style="text-align: right;">
-		Datos del 1 al 7 de Abril 2015<br/>
+<div class="row">
+<div class="col-sm-6">
+	<span class="ui-select" style="margin: 0px 0px 2px 0%;">
+                <select>
+                    <option>Mustard</option>
+                    <option>Ketchup</option>
+                    <option>Barbecue</option>
+                </select>
+        </span>
+	
+			
+</div>
+	
+<div class='col-sm-6' style="padding-bottom: 8px;">
+       <div data-ng-controller="DatepickerDemoCtrl" style="max-width:200px;">
+                    <div class="input-group ui-datepicker">
+                        <input type="text" 
+                               class="form-control"
+                               datepicker-popup="{{format}}"
+                               ng-model="dt"
+                               is-open="opened"
+                               min="minDate"
+                               max="'2015-06-22'"
+                               datepicker-options="dateOptions" 
+                               date-disabled="disabled(date, mode)"
+                               ng-required="true" 
+                               close-text="Close">
+                        <span class="input-group-addon" ng-click="open($event)"><i class="fa fa-calendar"></i></span>
+                    </div>
+                    <input type="hidden" value="{{dt | date:'shortDate'}}" />
 	</div>
+</div>
 </div>
     <!-- stats -->
     <div class="row">
